--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Dimas Prasetyo",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
